--- a/src/main/resources/templates/outputs/save.html
+++ b/src/main/resources/templates/outputs/save.html
@@ -9,6 +9,7 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
         crossorigin="anonymous">
+		<link rel="stylesheet" th:href="@{/css/app.css}">
 </head>
 <body class="container py-4">
 
